fixed spacing

--- a/client/src/styles/Questions.css
+++ b/client/src/styles/Questions.css
@@ -15,9 +15,11 @@
     padding: 0;
    padding-bottom: 10px;
 }
+
 .radio:checked+label::before{
     border:2px solid white;
-    background-color: rgb(143, 132, 132);
+    background-color: rgba(255, 255, 255, 0.8);
+    
 }
 label{
     position: relative;
