--- a/client/src/styles/Result.css
+++ b/client/src/styles/Result.css
@@ -4,7 +4,7 @@
     width:40vw;
     height: 49vh;
     border: 1px solid gray;
-    margin-top: 50px;
+    margin-top: 10em;
 }
 #details{
     display: flex;
